tests/NormalTests/paczka1/fuzzy1/71894718.err
Error in line 4: DDkgB S930 11,0
Error in line 6: DDkgB A294 -1,7
Error in line 14: xKMG6 A294 67,1
Error in line 5: DDkgB A294 33,3
Error in line 36: SiSXAC6nwQs S930 -1,5
Error in line 37: LvHobLPH S		6 59,	
Error in line 35: WUVM9D2yw S930 1,0
